# apexlegend_web_backend

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
apex_py/controls/: ctr_hero.py  ctr_user.py  ctr_weapon.py
apex_py/data/: hero.py  user.py  weapon.py
apex_py/db/: db.py
apex_py/middleware/: README.md  check_auth.py  request_loger.py
apex_py/models/: apex_http_exception.py  hero.py  response.py  user.py  weapon.py
apex_py/utils/: config.py  jwt.py  logger.py
