[project]
name = "apex-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
